--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -48,5 +48,5 @@ jobs:
         github_token: ${{ secrets.ACCESS_TOKEN }}
         goos: ${{ matrix.goos }}
         goarch: ${{ matrix.goarch }}
-        release_tag: ${{ $env:GITHUB_SHA }}
+        release_tag: ${GITHUB_SHA}
         extra_files: LICENSE README.md
