--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        go get .
+        go mod download
 
     - name: Build
       run: go build -v ./src
