--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -32,8 +32,8 @@ jobs:
       run: |
         go mod download
 
-    - name: Build
-      run: go build -v ./src
+    - name: Install
+      run: go install github.com/sweoggy/slow-test-blocker/src
       env:
         GOAMD64: v3
 
